k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internet-banking
  labels:
    name: internet-banking
    environment: production
